grafo de interacciones

--- a/proyecto.ipynb
+++ b/proyecto.ipynb
@@ -471,6 +471,51 @@
     "        json.dump(resultados, f, indent=4)\n",
     "    print(\"Análisis finalizado con suavizado temporal.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2de60158",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import networkx as nx\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "def generar_grafo_relaciones(json_path):\n",
+    "    with open(json_path, 'r') as f:\n",
+    "        datos = json.load(f)\n",
+    "\n",
+    "    G = nx.DiGraph() # Grafo dirigido (A mira a B)\n",
+    "\n",
+    "    # Procesar interacciones\n",
+    "    for inter in datos[\"interacciones\"]:\n",
+    "        u, v = inter[\"de\"], inter[\"a\"]\n",
+    "        emocion = inter[\"emocion\"]\n",
+    "        \n",
+    "        if G.has_edge(u, v):\n",
+    "            G[u][v]['weight'] += 1\n",
+    "            G[u][v]['emociones'].append(emocion)\n",
+    "        else:\n",
+    "            G.add_edge(u, v, weight=1, emociones=[emocion])\n",
+    "\n",
+    "    # Dibujar\n",
+    "    plt.figure(figsize=(10, 8))\n",
+    "    pos = nx.spring_layout(G)\n",
+    "    \n",
+    "    weights = [G[u][v]['weight'] * 0.5 for u, v in G.edges()]\n",
+    "    \n",
+    "    nx.draw(G, pos, with_labels=True, node_color='skyblue', \n",
+    "            node_size=2000, width=weights, edge_color='gray', arrowsize=20)\n",
+    "    \n",
+    "    plt.title(\"Grafo de Relaciones de Miradas en la Película\")\n",
+    "    plt.show()\n",
+    "\n",
+    "\n",
+    "\n",
+    "generar_grafo_relaciones(\"historia_completa.json\")"
+   ]
   }
  ],
  "metadata": {
