--- a/proyecto.ipynb
+++ b/proyecto.ipynb
@@ -247,10 +247,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "39449e2b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\crist\\AppData\\Local\\Temp\\ipykernel_19016\\4078624688.py:57: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  self.emotion_model.load_state_dict(torch.load(emotion_model_path, map_location=self.device))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Applied providers: ['CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}}\n",
+      "find model: C:\\Users\\crist/.insightface\\models\\buffalo_l\\1k3d68.onnx landmark_3d_68 ['None', 3, 192, 192] 0.0 1.0\n",
+      "Applied providers: ['CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}}\n",
+      "find model: C:\\Users\\crist/.insightface\\models\\buffalo_l\\2d106det.onnx landmark_2d_106 ['None', 3, 192, 192] 0.0 1.0\n",
+      "Applied providers: ['CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}}\n",
+      "find model: C:\\Users\\crist/.insightface\\models\\buffalo_l\\det_10g.onnx detection [1, 3, '?', '?'] 127.5 128.0\n",
+      "Applied providers: ['CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}}\n",
+      "find model: C:\\Users\\crist/.insightface\\models\\buffalo_l\\genderage.onnx genderage ['None', 3, 96, 96] 0.0 1.0\n",
+      "Applied providers: ['CPUExecutionProvider'], with options: {'CPUExecutionProvider': {}}\n",
+      "find model: C:\\Users\\crist/.insightface\\models\\buffalo_l\\w600k_r50.onnx recognition ['None', 3, 112, 112] 127.5 127.5\n",
+      "set det-size: (640, 640)\n",
+      "Análisis finalizado con suavizado temporal.\n"
+     ]
+    }
+   ],
    "source": [
     "import cv2\n",
     "import torch\n",
@@ -465,7 +492,7 @@
     "if __name__ == \"__main__\":\n",
     "    # Usa el modelo entrenado con pesos (el que mejor F1-Score tuvo)\n",
     "    analyzer = MovieAnalyzer(\"modelo_pesado_final.pth\")\n",
-    "    resultados = analyzer.process_video(\"teaser.mp4\")\n",
+    "    resultados = analyzer.process_video(\"3.mp4\")\n",
     "    \n",
     "    with open(\"historia_completa.json\", \"w\") as f:\n",
     "        json.dump(resultados, f, indent=4)\n",
@@ -525,7 +552,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.4"
   }
  },
